changes in themes

--- a/android-app/NutriAI/app/src/main/res/drawable/background_gradient.xml
+++ b/android-app/NutriAI/app/src/main/res/drawable/background_gradient.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <gradient
-        android:startColor="#E0F2FE"
-        android:centerColor="#F0F9FF"
-        android:endColor="#F8FAFC"
+        android:startColor="@color/background_gradient_start"
+        android:centerColor="@color/background_gradient_center"
+        android:endColor="@color/background_gradient_end"
         android:angle="270"/>
-    <corners android:radius="24dp"/>
 </shape>
-
-
