--- a/android-app/NutriAI/app/src/main/res/layout/fragment_health_dashboard.xml
+++ b/android-app/NutriAI/app/src/main/res/layout/fragment_health_dashboard.xml
@@ -184,6 +184,7 @@
                     </LinearLayout>
 
                     <ProgressBar
+                        android:id="@+id/progressCalories"
                         android:layout_width="match_parent"
                         android:layout_height="8dp"
                         android:layout_marginTop="12dp"
@@ -194,6 +195,7 @@
                         style="@style/Widget.AppCompat.ProgressBar.Horizontal" />
 
                     <TextView
+                        android:id="@+id/tvCaloriesPercentage"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="60%"
@@ -328,6 +330,7 @@
                     </LinearLayout>
 
                     <ProgressBar
+                        android:id="@+id/progressCarbs"
                         android:layout_width="match_parent"
                         android:layout_height="8dp"
                         android:layout_marginTop="12dp"
@@ -338,6 +341,7 @@
                         style="@style/Widget.AppCompat.ProgressBar.Horizontal" />
 
                     <TextView
+                        android:id="@+id/tvCarbsPercentage"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="60%"
